# sts2_rng_predictor

./: .gitignore  README.md  pyproject.toml
docs/: rng-correlation-calculator.md  rng-math-model.md  same-counter-fast-model.md
results/: README.md  leafy-hefty.md  neows-bones-curse.md  trash-heap.md
scripts/: plot_raw_scatter.py  reproduce_leafy_hefty.py  reproduce_neows_bones_curse.py  reproduce_trash_heap.py
sts2_rng_predictor/: __init__.py  cli.py  config.py  core.py  rng_compat.py  same_counter.py  source_inspection.py
